v5.8
-----
+ The "Remove" links on the wishlist no longer require the page to reload
: Fixed a bug in market transaction total caused by change in API by Valve